@@ -213,7 +213,7 @@
                 var temp = this.clone().moveToLastDayOfMonth();
                 this.moveToNthOccurrence(n, ntemp);
                 if (this > temp) {
-                    throw new RangeError($C.dayNames[n] + " does not occur " + ntemp + " times in the month of " + $C.monthNames[temp.getMonth()] + " " + temp.getFullYear() + ".");
+                    throw new RangeError($D.getDayName(n) + " does not occur " + ntemp + " times in the month of " + $D.getMonthName(temp.getMonth()) + " " + temp.getFullYear() + ".");
                 }
                 return this;
             }			
@@ -324,33 +324,13 @@
         $P[nth[l]] = (l === 0) ? nthfn(-1) : nthfn(l);
     }
     
-    if (!$D.toISOString) {
-        /**
-         * Converts the current date instance into a string with an ISO 8601 format. See also .toISOString().
-         * @return {String}  ISO string of date
-         */
-        $P.toISOString = function () {
-            // From http://www.json.org/json.js. Public Domain. 
-            function f(n) {
-                return n < 10 ? '0' + n : n;
-            }
-
-            return '"' + this.getUTCFullYear()   + '-' +
-                f(this.getUTCMonth() + 1) + '-' +
-                f(this.getUTCDate())      + 'T' +
-                f(this.getUTCHours())     + ':' +
-                f(this.getUTCMinutes())   + ':' +
-                f(this.getUTCSeconds())   + 'Z"';
-        };
-    }
-    
-    if (!$D.toJSONString) {
-        /**
-         * Converts the current date instance into a JSON string value. See also .toISOString().
-         * @return {String}  JSON string of date
-         */
-         $P.toJSONString = $P.toISOString;
-    }
+    /**
+     * Converts the current date instance into a JSON string value.
+     * @return {String}  JSON string of date
+     */
+    $P.toJSONString = function () {
+        return this.toString("yyyy-MM-ddThh:mm:ssZ");
+    };
 
     /**
      * Converts the current date instance to a string using the culture specific shortDatePattern.
